# swan-surrogate-model

./: .gitignore  .pre-commit-config.yaml  GA_input.ga5  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: paths.yaml.template  problem - Cópia.yaml  problem(1).yaml  problem(2).yaml  problem.yaml.template  swan.yaml  swan_defaults.yaml
data/processed/boundary_conditions/: Power.txt
data/raw/: area_plot.pol
docs/blueprints/: BLUEPRINTS_DELIVERY_PLAN.md  BLUEPRINTS_INDEX.md  BLUEPRINT_01_GENERATE_LAYOUTS.md  BLUEPRINT_02_BUILD_SWAN_INPUTS.md  BLUEPRINT_03_RUN_SWAN_BATCH.md  BLUEPRINT_04_PARSE_OUTPUTS.md  BLUEPRINT_05_BUILD_DATASET.md  BLUEPRINT_06_TRAIN_MODEL.md  BLUEPRINT_07_VALIDATE_MODEL.md  BLUEPRINT_08_EXPORT_SURROGATE.md  BLUEPRINT_09_USE_IN_GA.md  BLUEPRINT_CONFIG_GLOBAL.md  BLUEPRINT_FILES_ORDERED.md  BLUEPRINT_REVIEW_FINAL.md  BLUEPRINT_TRACEABILITY.md  FINAL_BLUEPRINT_DELIVERY_PACKAGE.md  surrogate_swan_plano_v2_auditado.md
docs/templates/: INPUT.swn.j2  input.swn.template
scripts/: 01_generate_layouts.py  01_layout_generator.py  02_build_swan_inputs.py  02_sea_states_sampling.py  03_INPUT.swn.j2  03_build_swan_inputs.py  03_run_swan_batch.py  04_parse_outputs.py  04_run_swan_batch.py  05_build_dataset.py  05_parse_outputs.py  06_train_model.py  07_train_model.py  07_validate_model.py  08_export_surrogate.py  08_validate_model.py  09_export_surrogate.py  09_use_in_ga.py  10_ga_integration.py  coordinates_converter.ipynb  scripts_utils.py  set_data.ipynb
src/config/: loader.py
src/ga_integration/: __init__.py  fitness.py
src/layouts/: geometry.py
src/parser/: __init__.py
src/runner/: __init__.py
src/swan_surrogate/dataset/: __init__.py
src/swan_surrogate/export/: __init__.py
src/swan_surrogate/ga_integration/: fitness.py
src/swan_surrogate/layouts/: __init__.py
src/swan_surrogate/swan_inputs/: __init__.py
src/swan_surrogate/utils/: logging.py  paths.py
src/swan_surrogate/validation/: __init__.py
src/utils/: logging.py
tests/unit/: test_geometry.py
