[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swan-surrogate-model"
version = "0.1.0"
description = "Physics-informed surrogate model for WEC array layout optimisation using SNL-SWAN"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["surrogate", "swan", "wec", "wave-energy", "neural-operator", "optimisation"]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "netCDF4>=1.6",
    "xarray>=2023.6",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "torch>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "pre-commit>=3.4",
    "ipykernel>=6.25",
    "jupyterlab>=4.0",
]

[project.scripts]
surrogate-generate = "scripts.01_generate_layouts:main"
surrogate-build    = "scripts.02_build_swan_inputs:main"
surrogate-run      = "scripts.03_run_swan_batch:main"
surrogate-parse    = "scripts.04_parse_outputs:main"
surrogate-dataset  = "scripts.05_build_dataset:main"
surrogate-train    = "scripts.06_train_model:main"
surrogate-validate = "scripts.07_validate_model:main"
surrogate-export   = "scripts.08_export_surrogate:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
