[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swan-surrogate-model"
version = "0.1.0"
description = "Physics-informed surrogate model for WEC array layout optimisation using SNL-SWAN"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["surrogate", "swan", "wec", "wave-energy", "neural-operator", "optimisation"]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "netCDF4>=1.6",
    "xarray>=2023.6",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "torch>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
# ci: lightweight subset used in GitHub Actions (no torch, no xgboost)
ci = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "click>=8.1",
    "rich>=13.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "pre-commit>=3.4",
    "ipykernel>=6.25",
    "jupyterlab>=4.0",
]

# NOTE: [project.scripts] intentionally omitted.
# Pipeline stages are run directly as scripts/01_generate_layouts.py etc.
# Filenames starting with digits are not valid Python module entry points.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
exclude = ["scripts/"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
